chore: kotlin 1.7 RC changes